--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
 	<h1 style="color: blue">GITHUB PRACTICE</h1>
 	<h2 style="color: pink; "> Let's practice some branching!</h2>
+	<h3 style="color: blue; "> Holy crap- this is FUN!!!</h3>
 
 </body>
 </html>
